🛒 إضافة المتاجر المتقدمة والسوق المظلم السرية
✨ مميزات جديدة من War & Order و Mobile Strike:

🛒 المتاجر المتقدمة (8 متاجر):
• سوق التقنية المتقدمة
• بازار المستقبل
• محلات مجرة الطاقة
• متجر الحرب السيبرانية
• سوق الزمن المتقدم
• متجر التجارة الكمية
• مستودع النجوم
• سوق الفراغ المجهول

🕴️ السوق المظلم السرية:
• الآثار المحرمة (أسطوري)
• التقنيات المحظورة (نادر جداً)
• المواد النادرة (نادر)
• صفقة منتصف الليل
• المزاد الأسبوعي

🔧 التحسينات:
• أسماء معدلة ومناسبة للسياق
• واجهات تفاعلية جديدة
• نظام وصول ذكي للمتاجر والسوق
• تكامل كامل مع الأنظمة الموجودة
• ملف اختبار شامل للميزات الجديدة

--- a/index-3d.html
+++ b/index-3d.html
@@ -90,6 +90,12 @@
                     <button class="elite-btn" onclick="game.createInvestmentCenterInterface()" title="مركز الاستثمار">
                         💰 مركز الاستثمار
                     </button>
+                    <button class="elite-btn new-feature" onclick="game.createAdvancedStoresInterface()" title="المتاجر المتقدمة">
+                        🛒 المتاجر المتقدمة
+                    </button>
+                    <button class="elite-btn new-feature" onclick="game.createBlackMarketInterface()" title="السوق المظلم السرية">
+                        🕴️ السوق المظلم
+                    </button>
                 </div>
             </div>
             
